# DIOS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: contracts.yml
docs/: ARCHITECTURE.md  AUFMASS_METHOD.md  DATA_MODEL.md  ROADMAP.md  VALIDATION.md
docs/architecture/: ARCHITECTURE_FREEZE_V0_1.md  MEMORY_GATE_PACKET.md  MODULE_AND_ADAPTER_CONTRACTS.md  REVISION_MODEL.md  REVISION_REGISTER.md  SKELETON_DIOS_GAP_ANALYSIS.md
docs/integrations/sketchup/: ARCHITECTURE.md
examples/: quantity_record.json
schemas/: quantity-record.schema.json
schemas/dios/: README.md  entity_representation.schema.json  measurement_method.schema.json  measurement_record.schema.json  observation.schema.json  quantity_record.schema.json  revision_set.schema.json  technical_change_set.schema.json  technical_entity.schema.json  technical_invalidation.schema.json  technical_snapshot.schema.json  technical_source_revision.schema.json  technical_validation_result.schema.json
schemas/modules/: application_bridge_contract.schema.json  dios_module_manifest_extension.schema.json  discipline_pack_contract.schema.json  failure_declaration.schema.json  output_adapter_contract.schema.json  project_profile.schema.json  source_adapter_contract.schema.json
src/dios/: __init__.py  models.py
tests/: test_models.py
tests/contracts/: __init__.py  test_entity_evidence_schemas.py  test_measurement_quantity_schemas.py  test_module_adapter_contracts.py  test_source_state_schemas.py  test_synthetic_core_v0.py  test_validation_change_invalidation_schemas.py  test_value_object_schemas.py
(+24 files in other folders)
