[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dios-drawing-intelligence"
version = "0.1.0"
description = "Evidence-first data models for construction drawing intelligence"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
